[package]
name = "postsse"
version = "0.1.0"
authors = ["Vitaly _Vi Shukela <vi0oss@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.6"
tokio = {version="0.2.21", features=["macros","net","time","rt-threaded"]}
anyhow = "1.0.31"
http = "0.2.1"
bytes = "0.5.5"
dashmap = "3.11.4"
