[package]
name = "postsse"
version = "0.1.0"
authors = ["Vitaly _Vi Shukela <vi0oss@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = {version = "0.14", features=["http1","http2","server", "runtime"]}
tokio = {version="1", features=["macros","net","time","rt"]}
anyhow = "1.0.31"
http = "0.2.1"
bytes = "1.2"
dashmap = "5"
